--- a/index.html
+++ b/index.html
@@ -8,12 +8,14 @@
 </head>
 <body>
 
-    <form>
-            <form>
+
+            <form class="form" novalidate>
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" name="nombre" autocomplete="off" >
                     <label for="apellido">Apellido:</label>
                     <input type="text" id="apellido" autocomplete="off">
+                    <label for="correo">Correo:</label>
+                    <input type="email" id="email" autocomplete="off">
                     <label for="telefono">Teléfono:</label>
                     <input type="tel" id="telefono" autocomplete="off">
                     <label for="direccion">Dirección:</label>
@@ -27,6 +29,7 @@
                     <label for="documento">Documento:</label>
                     <input type="text" id="documento" autocomplete="off">
 
+
                     <div>
                         <input type="checkbox" id="politicas">
                         <label for="politicas">
@@ -34,12 +37,9 @@
                         </label>
                     </div>
 
-                    <button id="botoncito" type="submit" disabled="disabled">Enviar</button>
+                    <button id="botoncito" type="submit">Enviar</button>
 
             </form>
-            <script src="app.js"></script>
-    </form>
-
-
+            <script type="module" src="app.js"></script>
 </body>
 </html>
