--- a/index_2.html
+++ b/index_2.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
+<div class="container layout">
 
+<div class="Formulario">
     <form class="form" novalidate>
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" autocomplete="off" required>
@@ -30,7 +32,42 @@
             <label for="politicas">Acepta Politicas de Uso</label>
         </div>
         <button id="botoncito" type="submit">Enviar</button>
-    </form>
+     </form>
+</div>
+   
+<div class="tabla">
+<table>
+    <thead>
+        <th>Nombre</th>
+        <th>Apellido</th>
+        <th>Telefono</th>
+        <th>Direccion</th>
+        <th>Correo</th>
+        <th>Tipo Documento</th>
+        <th># Documento</th>
+    </thead>
+    <tbody>
+        
+    </tbody>
+</table>
+</div>
+
+</div>
+<template id="tp_users">
+    <tr>
+        <td class="nombre"></td>
+        <td class="apellido"></td>
+        <td class="correo"></td>
+        <td class="telefono"></td>
+        <td class="direccion"></td>
+        <td class="tipo"></td>
+        <td class="documento"></td>
+    </tr>
+</template>
+
+
+
+
     <script src="app.js" type="module"></script>
 </body>
 </html>
