Avance en clase 14/08/2024

--- a/index_2.html
+++ b/index_2.html
@@ -62,6 +62,10 @@
         <td class="direccion"></td>
         <td class="tipo"></td>
         <td class="documento"></td>
+        <td> <div>
+            <button class="Modificar">Modificar</button>
+            <button class="Eliminar">Eliminar</button>
+        </div></td>
     </tr>
 </template>
 
