--- a/index_2.html
+++ b/index_2.html
@@ -12,6 +12,7 @@
 
 <div class="Formulario">
     <form class="form" novalidate>
+        <input type="hidden" id="user" placeholder="Este es el ID">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" autocomplete="off" required>
         <label for="apellido">Apellido:</label>
