--- a/documento.html
+++ b/documento.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DOCUMENTO</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Documento</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-
-    <form class="form" novalidate>
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required autocomplete="off" >
-       <button id="botoncito" type="submit">Enviar</button>
+    <form class="form">
+        <div class="form__group">
+            <label for="nombre">Tipo de documento</label>
+            <input type="text" id="nombre" autocomplete="off" required>
+            
+        </div>
+        <button type="summit" id="boton">Enviar</button>
     </form>
+    <script src="documento.js" type="module"></script>
 </body>
-<script src="documento.js" type="module"></script>
 </html>
